# ytllm

./: .env.example  .gitignore  CLAUDE.md  PRICING.md  README.md  instrument.js  mvp.md  package-lock.json  package.json  prd.md  session-summary-v2-workspace.md  session.md  todo.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 01f44cb84f03_add_mentor_sessions_table.py  12225ad9fa3d_add_model_temperature_to_chat_sessions.py  2ba935f0cae3_add_supabase_auth_fields.py  41bfc547bd0b_add_updated_at_make_password_hash_.py  6a1135035b8e_add_workspace_members_table.py  6c24d2dbf94d_initial_v1_models.py  87e0037f166b_add_quizzes_table.py  9d51c7b57cce_finalize_user_schema.py  a5795540fa44_add_learning_path_tables.py  b9d4d8e6a1f2_create_standalone_tables.py  dd143cf55702_add_flashcards_table.py  e08fe825261f_add_auth_provider_to_users.py  e251248d244c_v0_to_v1_migration.py
backend/app/: config.py  database.py  db_models.py  main.py  models.py
backend/app/routes/: __init__.py  auth.py  chat.py  tasks.py  transcript.py
backend/app/services/: actions_service.py  auth_service.py  code_chunker.py  daily_revision_service.py  docx_service.py  embedding_service.py  flashcard_service.py  github_service.py  learning_path_service.py  llm_service.py  markdown_service.py  mentor_service.py  (+13 more)
backend/tests/: test_chunk_segments.py  test_code_chunker.py  test_standalone_schema.py  test_supabase_auth.py
server-python/: .env.example  pyproject.toml  requirements.txt
server-python/app/: __init__.py  config.py  database.py  db_models.py  main.py  models.py
(+192 files in other folders)
