[project]
name = "knowledgeos-server"
version = "1.0.0"
description = "KnowledgeOS - Python Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "openai>=1.55.0",
    "chromadb>=0.5.0",
    "fpdf2>=2.7.0",
    "python-docx>=1.1.0",
    "youtube-transcript-api>=1.0.0",
    "slowapi>=0.1.9",
    "sentry-sdk>=2.0.0",
    "cachetools>=5.5.0",
    "python-dotenv>=1.0.0",
    "xmltodict>=0.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    "supabase>=2.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
